--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ ext {
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
-	implementation('org.springframework.cloud:spring-cloud-starter-bootstrap')
+	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
