--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.7.5'
+	implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
